Added Optimierung für Visuals & Identifikation durch User