@@ -10,15 +10,22 @@ import org.springframework.core.annotation.Order;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Component
 @Order(2)
 @RequiredArgsConstructor
 public class DataInitializer implements CommandLineRunner {
+
+    private static final String DEMO_STUDENT_EMAIL = "student@campusplatform.de";
+
+    private static final byte[] DEMO_PDF_BYTES =
+            "%PDF-1.4\nDemo PDF\n".getBytes(StandardCharsets.UTF_8);
+    private static final String DEMO_PDF_BASE64 =
+            java.util.Base64.getEncoder().encodeToString(DEMO_PDF_BYTES);
 
     private final ExamTypeRepository examTypeRepository;
     private final CourseOfStudyRepository courseOfStudyRepository;
@@ -29,20 +36,20 @@ public class DataInitializer implements CommandLineRunner {
     private final StudyGroupMembershipRepository membershipRepository;
     private final ModuleRepository moduleRepository;
     private final InstitutionRepository institutionRepository;
-    private final FaqRepository faqRepository;  
+    private final FaqRepository faqRepository;
     private final CourseSeriesRepository courseSeriesRepository;
     private final RoomRepository roomRepository;
     private final EventRepository eventRepository;
     private final StudentCourseSubmissionRepository submissionRepository;
+    private final SubmissionDocumentRepository submissionDocumentRepository;
     private final org.springframework.security.crypto.password.PasswordEncoder passwordEncoder;
 
     @Override
     @Transactional
     public void run(String... args) {
         if (examTypeRepository.count() == 0) {
-            // --- Institution Identity ---
             InstitutionInfo glCampus = institutionRepository.save(InstitutionInfo.builder()
-                    .universityName("FDSE")
+                    .universityName("CampusPlatform")
                     .city("Bergisch Gladbach")
                     .sekretariatEmail("office@gl.campusplatform.de")
                     .sekretariatPhone("+49 2202 123456")
@@ -50,59 +57,122 @@ public class DataInitializer implements CommandLineRunner {
                     .websiteEmail("admin@campusplatform.de")
                     .bibliothekUrl("https://bib.gl.campusplatform.de")
                     .mensaUrl("https://mensa.gl.campusplatform.de")
-                    .impressum("FDSE Bergisch Gladbach - Campus Platform Management")
+                    .impressum("CampusPlatform Bergisch Gladbach - Campus Platform Management")
                     .build());
 
-            // Base Exam Types
-            ExamType kl = examTypeRepository.save(ExamType.builder().type("KL").category(ExamCategory.WRITTEN).nameDe("Klausur").nameEn("Written Exam")
-                    .shortDe("KL").shortEn("WE").build());
-            ExamType rf = examTypeRepository.save(ExamType.builder().type("RF").category(ExamCategory.SUBMISSION).nameDe("Referat").nameEn("Presentation")
-                    .shortDe("RF").shortEn("PRS").build());
-            ExamType sa = examTypeRepository.save(ExamType.builder().type("SA").category(ExamCategory.SUBMISSION).nameDe("Studienarbeit")
-                    .nameEn("Term Paper").shortDe("SA").shortEn("TP").build());
+            ExamType kl = examTypeRepository.save(ExamType.builder()
+                    .type("KL")
+                    .category(ExamCategory.WRITTEN)
+                    .nameDe("Klausur")
+                    .nameEn("Written Exam")
+                    .shortDe("KL")
+                    .shortEn("WE")
+                    .build());
+
+            ExamType rf = examTypeRepository.save(ExamType.builder()
+                    .type("RF")
+                    .category(ExamCategory.SUBMISSION)
+                    .nameDe("Referat")
+                    .nameEn("Presentation")
+                    .shortDe("RF")
+                    .shortEn("PRS")
+                    .build());
+
+            ExamType sa = examTypeRepository.save(ExamType.builder()
+                    .type("SA")
+                    .category(ExamCategory.SUBMISSION)
+                    .nameDe("Studienarbeit")
+                    .nameEn("Term Paper")
+                    .shortDe("SA")
+                    .shortEn("TP")
+                    .build());
+
             Set<ExamType> allTypes = Set.of(kl, rf, sa);
 
-            // --- Courses & Specializations ---
-            CourseOfStudy bwBachelor = courseOfStudyRepository
-                    .save(CourseOfStudy.builder().name("Betriebswirtschaft").degreeType(DegreeType.BACHELOR).build());
-            CourseOfStudy bwMaster = courseOfStudyRepository
-                    .save(CourseOfStudy.builder().name("Betriebswirtschaft").degreeType(DegreeType.MASTER).build());
-            createSpecializations(bwBachelor,
-                    List.of("Automotive Management", "Banking and Finance", "Business Management",
-                            "International Business", "International Business Management", "Logistikmanagement",
-                            "Steuerrecht"));
-            createSpecializations(bwMaster,
-                    List.of("Automotive Management", "Business Management", "Controlling",
-                            "Einkauf und Logistikmanagement", "Human Resource Management",
-                            "Management und Führung im Finanzvertrieb", "Marketing und Vertrieb"));
+            CourseOfStudy bwBachelor = courseOfStudyRepository.save(
+                    CourseOfStudy.builder().name("Betriebswirtschaft").degreeType(DegreeType.BACHELOR).build());
+            CourseOfStudy bwMaster = courseOfStudyRepository.save(
+                    CourseOfStudy.builder().name("Betriebswirtschaft").degreeType(DegreeType.MASTER).build());
+
+            createSpecializations(bwBachelor, List.of(
+                    "Automotive Management",
+                    "Banking and Finance",
+                    "Business Management",
+                    "International Business",
+                    "International Business Management",
+                    "Logistikmanagement",
+                    "Steuerrecht"
+            ));
+
+            createSpecializations(bwMaster, List.of(
+                    "Automotive Management",
+                    "Business Management",
+                    "Controlling",
+                    "Einkauf und Logistikmanagement",
+                    "Human Resource Management",
+                    "Management und Führung im Finanzvertrieb",
+                    "Marketing und Vertrieb"
+            ));
 
             CourseOfStudy wiBachelor = courseOfStudyRepository.save(
                     CourseOfStudy.builder().name("Wirtschaftsinformatik").degreeType(DegreeType.BACHELOR).build());
-            CourseOfStudy wiMaster = courseOfStudyRepository
-                    .save(CourseOfStudy.builder().name("Wirtschaftsinformatik").degreeType(DegreeType.MASTER).build());
-            createSpecializations(wiBachelor, List.of("Business Process Management", "Cyber Security", "IT-Consulting",
-                    "Künstliche Intelligenz & Data Science", "Software Engineering"));
-            createSpecializations(wiMaster, List.of("Angewandte Künstliche Intelligenz", "Cyber Security",
-                    "IT-Management", "Künstliche Intelligenz & Data Science", "Nachhaltige IT"));
+            CourseOfStudy wiMaster = courseOfStudyRepository.save(
+                    CourseOfStudy.builder().name("Wirtschaftsinformatik").degreeType(DegreeType.MASTER).build());
+
+            createSpecializations(wiBachelor, List.of(
+                    "Business Process Management",
+                    "Cyber Security",
+                    "IT-Consulting",
+                    "Künstliche Intelligenz & Data Science",
+                    "Software Engineering"
+            ));
+
+            createSpecializations(wiMaster, List.of(
+                    "Angewandte Künstliche Intelligenz",
+                    "Cyber Security",
+                    "IT-Management",
+                    "Künstliche Intelligenz & Data Science",
+                    "Nachhaltige IT"
+            ));
 
             CourseOfStudy aiBachelor = courseOfStudyRepository.save(
                     CourseOfStudy.builder().name("Angewandte Informatik").degreeType(DegreeType.BACHELOR).build());
-            createSpecializations(aiBachelor,
-                    List.of("Smart Systems", "Software-Entwicklung und -Management", "Virtual Worlds"));
+
+            createSpecializations(aiBachelor, List.of(
+                    "Smart Systems",
+                    "Software-Entwicklung und -Management",
+                    "Virtual Worlds"
+            ));
 
             AppUser instructor = userRepository.findByEmail("lecturer@campusplatform.de")
                     .orElseThrow(() -> new IllegalStateException("Initial lecturer not found!"));
+
             AppUser p = createLecturer(Salutation.MS, AcademicTitle.PROF_DR, "Patrice", "Admin",
                     "p.admin@campusplatform.de");
-            AppUser a = createLecturer(Salutation.MR, AcademicTitle.DR, "Adam", "Smart", "a.smart@campusplatform.de");
-            AppUser m = createLecturer(Salutation.MR, null, "Marc", "Code", "m.code@campusplatform.de");
+            AppUser a = createLecturer(Salutation.MR, AcademicTitle.DR, "Adam", "Smart",
+                    "a.smart@campusplatform.de");
+            AppUser m = createLecturer(Salutation.MR, null, "Marc", "Code",
+                    "m.code@campusplatform.de");
+
             List<AppUser> lecturers = List.of(instructor, p, a, m);
 
-            // --- Mockup Modules (Wirtschaftsinformatik) ---
             Specialization seSpec = specializationRepository.findAll().stream()
                     .filter(s -> s.getName().equals("Software Engineering")
                             && s.getCourseOfStudy().getId().equals(wiBachelor.getId()))
-                    .findFirst().orElseThrow();
+                    .findFirst()
+                    .orElseThrow();
+
+            Specialization csSpec = specializationRepository.findAll().stream()
+                    .filter(s -> s.getName().equals("Cyber Security")
+                            && s.getCourseOfStudy().getId().equals(wiBachelor.getId()))
+                    .findFirst()
+                    .orElseThrow();
+
+            Specialization iteSpec = specializationRepository.findAll().stream()
+                    .filter(s -> s.getName().equals("IT-Consulting")
+                            && s.getCourseOfStudy().getId().equals(wiBachelor.getId()))
+                    .findFirst()
+                    .orElseThrow();
 
             Module prog1 = moduleRepository.save(Module.builder()
                     .name("Programmierung 1")
@@ -138,27 +208,13 @@ public class DataInitializer implements CommandLineRunner {
             assignLecturersToModule(prog2, lecturers);
             assignLecturersToModule(seProject, lecturers);
 
-            // --- Mockup Students and Groups ---
             if (studyGroupRepository.count() == 0) {
-                Specialization csSpec = specializationRepository.findAll().stream()
-                        .filter(s -> s.getName().equals("Cyber Security")
-                                && s.getCourseOfStudy().getId().equals(wiBachelor.getId()))
-                        .findFirst().orElseThrow();
-                Specialization iteSpec = specializationRepository.findAll().stream()
-                        .filter(s -> s.getName().equals("IT-Consulting")
-                                && s.getCourseOfStudy().getId().equals(wiBachelor.getId()))
-                        .findFirst().orElseThrow();
-
-                // Group Naming Logic based on Frontend:
-                // {City}{Uni}{Course}{Spec}{Quartal}{YearYY}{Degree}
-                // Bergisch Gladbach (B), FDSE (F), Wirtschaftsinformatik (W), SE/CS/ITC
-                // (S/C/I), Q4 (4), 2024 (24), Bachelor (A)
-                StudyGroup g1 = studyGroupRepository
-                        .save(StudyGroup.builder().name("BFWS424A").specialization(seSpec).startYear(2024).startQuartal(4).build());
-                StudyGroup g2 = studyGroupRepository
-                        .save(StudyGroup.builder().name("BFWC424A").specialization(csSpec).startYear(2024).startQuartal(4).build());
-                StudyGroup g3 = studyGroupRepository
-                        .save(StudyGroup.builder().name("BFWI424A").specialization(iteSpec).startYear(2024).startQuartal(4).build());
+                StudyGroup g1 = studyGroupRepository.save(
+                        StudyGroup.builder().name("BFWS424A").specialization(seSpec).startYear(2024).startQuartal(4).build());
+                StudyGroup g2 = studyGroupRepository.save(
+                        StudyGroup.builder().name("BFWC424A").specialization(csSpec).startYear(2024).startQuartal(4).build());
+                StudyGroup g3 = studyGroupRepository.save(
+                        StudyGroup.builder().name("BFWI424A").specialization(iteSpec).startYear(2024).startQuartal(4).build());
 
                 createStudentsForGroup(g1, 20, 1000);
                 createStudentsForGroup(g2, 10, 2000);
@@ -166,40 +222,43 @@ public class DataInitializer implements CommandLineRunner {
             }
 
             createFaqs();
-  
-            // --- Course Series Demo Data ---
+
             if (courseSeriesRepository.count() == 0) {
-                java.util.List<StudyGroup> allGroups = studyGroupRepository.findAll();
-                StudyGroup mockG1 = allGroups.stream().filter(g -> g.getName().equals("BFWS424A")).findFirst()
-                        .orElse(null);
-                StudyGroup mockG2 = allGroups.stream().filter(g -> g.getName().equals("BFWI424A")).findFirst()
-                        .orElse(null);
+                List<StudyGroup> allGroups = studyGroupRepository.findAll();
+                StudyGroup mockG1 = allGroups.stream()
+                        .filter(g -> g.getName().equals("BFWS424A"))
+                        .findFirst()
+                        .orElseThrow(() -> new IllegalStateException("Study group BFWS424A missing"));
 
-                if (mockG1 == null || mockG2 == null) {
-                    throw new IllegalStateException("Required study groups for demo data are missing!");
-                }
+                StudyGroup mockG2 = allGroups.stream()
+                        .filter(g -> g.getName().equals("BFWI424A"))
+                        .findFirst()
+                        .orElseThrow(() -> new IllegalStateException("Study group BFWI424A missing"));
 
-                CourseSeries cs1 = CourseSeries.builder()
+                /*
+                 * Basisdaten für andere Bereiche
+                 */
+                CourseSeries writtenExamSeries = CourseSeries.builder()
                         .module(prog1)
                         .assignedLecturer(instructor)
                         .status(CourseStatus.ACTIVE)
                         .selectedExamType(kl)
                         .submissionStartDate(LocalDateTime.now().minusDays(10))
                         .submissionDeadline(LocalDateTime.now().plusDays(20))
-                        .studyGroups(java.util.Set.of(mockG1))
+                        .studyGroups(Set.of(mockG1))
                         .build();
 
-                CourseSeries cs2 = CourseSeries.builder()
+                CourseSeries futureSubmissionSeries = CourseSeries.builder()
                         .module(seProject)
                         .assignedLecturer(instructor)
                         .status(CourseStatus.PLANNED)
                         .selectedExamType(rf)
                         .submissionStartDate(LocalDateTime.now().plusDays(30))
                         .submissionDeadline(LocalDateTime.now().plusDays(60))
-                        .studyGroups(java.util.Set.of(mockG2))
+                        .studyGroups(Set.of(mockG2))
                         .build();
 
-                CourseSeries cs3 = CourseSeries.builder()
+                CourseSeries lecturerGradingSeries = CourseSeries.builder()
                         .module(prog1)
                         .assignedLecturer(instructor)
                         .status(CourseStatus.GRADING)
@@ -207,12 +266,104 @@ public class DataInitializer implements CommandLineRunner {
                         .selectedExamType(kl)
                         .submissionStartDate(LocalDateTime.now().minusDays(90))
                         .submissionDeadline(LocalDateTime.now().minusDays(30))
-                        .studyGroups(java.util.Set.of(mockG1, mockG2))
+                        .studyGroups(Set.of(mockG1, mockG2))
                         .build();
 
-                List<CourseSeries> savedSeries = courseSeriesRepository.saveAll(List.of(cs1, cs2, cs3));
+                /*
+                 * 7 Testfälle für die Student-Statuslogik
+                 */
 
-                // Create Demo Events using existing rooms
+                // 1. Ausstehend
+                CourseSeries pendingEmptySeries = CourseSeries.builder()
+                        .module(seProject)
+                        .assignedLecturer(instructor)
+                        .status(CourseStatus.ACTIVE)
+                        .selectedExamType(rf)
+                        .submissionStartDate(LocalDateTime.now().minusDays(2))
+                        .submissionDeadline(LocalDateTime.now().plusDays(20))
+                        .studyGroups(Set.of(mockG1))
+                        .build();
+
+                // 2. In Bearbeitung
+                CourseSeries progressSeries = CourseSeries.builder()
+                        .module(seProject)
+                        .assignedLecturer(instructor)
+                        .status(CourseStatus.ACTIVE)
+                        .selectedExamType(sa)
+                        .submissionStartDate(LocalDateTime.now().minusDays(3))
+                        .submissionDeadline(LocalDateTime.now().plusDays(18))
+                        .studyGroups(Set.of(mockG1))
+                        .build();
+
+                // 3. Eingereicht
+                CourseSeries submittedSeries = CourseSeries.builder()
+                        .module(seProject)
+                        .assignedLecturer(instructor)
+                        .status(CourseStatus.ACTIVE)
+                        .selectedExamType(rf)
+                        .submissionStartDate(LocalDateTime.now().minusDays(5))
+                        .submissionDeadline(LocalDateTime.now().plusDays(10))
+                        .studyGroups(Set.of(mockG1))
+                        .build();
+
+                // 4. Frist abgelaufen – eingereicht
+                CourseSeries submittedClosedSeries = CourseSeries.builder()
+                        .module(seProject)
+                        .assignedLecturer(instructor)
+                        .status(CourseStatus.ACTIVE)
+                        .selectedExamType(sa)
+                        .submissionStartDate(LocalDateTime.now().minusDays(20))
+                        .submissionDeadline(LocalDateTime.now().minusDays(2))
+                        .studyGroups(Set.of(mockG1))
+                        .build();
+
+                // 5. Überfällig / nicht eingereicht
+                CourseSeries overdueSeries = CourseSeries.builder()
+                        .module(seProject)
+                        .assignedLecturer(instructor)
+                        .status(CourseStatus.ACTIVE)
+                        .selectedExamType(rf)
+                        .submissionStartDate(LocalDateTime.now().minusDays(25))
+                        .submissionDeadline(LocalDateTime.now().minusDays(3))
+                        .studyGroups(Set.of(mockG1))
+                        .build();
+
+                // 6. Bewertet
+                CourseSeries gradedSeries = CourseSeries.builder()
+                        .module(seProject)
+                        .assignedLecturer(instructor)
+                        .status(CourseStatus.GRADING)
+                        .examStatus(ExamStatus.GRADING)
+                        .selectedExamType(sa)
+                        .submissionStartDate(LocalDateTime.now().minusDays(40))
+                        .submissionDeadline(LocalDateTime.now().minusDays(10))
+                        .studyGroups(Set.of(mockG1))
+                        .build();
+
+                // 7. Bald fällig
+                CourseSeries dueSoonSeries = CourseSeries.builder()
+                        .module(seProject)
+                        .assignedLecturer(instructor)
+                        .status(CourseStatus.ACTIVE)
+                        .selectedExamType(rf)
+                        .submissionStartDate(LocalDateTime.now().minusDays(1))
+                        .submissionDeadline(LocalDateTime.now().plusDays(5))
+                        .studyGroups(Set.of(mockG1))
+                        .build();
+
+                List<CourseSeries> savedSeries = courseSeriesRepository.saveAll(List.of(
+                        writtenExamSeries,
+                        futureSubmissionSeries,
+                        lecturerGradingSeries,
+                        pendingEmptySeries,
+                        progressSeries,
+                        submittedSeries,
+                        submittedClosedSeries,
+                        overdueSeries,
+                        gradedSeries,
+                        dueSoonSeries
+                ));
+
                 List<Room> rooms = roomRepository.findAll();
                 if (!rooms.isEmpty()) {
                     for (CourseSeries series : savedSeries) {
@@ -220,10 +371,10 @@ public class DataInitializer implements CommandLineRunner {
                             Room room = rooms.get(i % rooms.size());
                             EventType type = EventType.LEHRVERANSTALTUNG;
                             LocalDateTime startTime = series.getSubmissionStartDate().plusWeeks(i)
-                                    .withHour(Math.min(8 + i, 18)).withMinute(0);
+                                    .withHour(Math.min(8 + i, 18))
+                                    .withMinute(0);
 
-                            // Special case for cs3: set last event as KLAUSUR yesterday
-                            if (series == cs3 && i == 9) {
+                            if (series == lecturerGradingSeries && i == 9) {
                                 type = EventType.KLAUSUR;
                                 startTime = LocalDateTime.now().minusDays(1).withHour(10).withMinute(0);
                             }
@@ -240,20 +391,77 @@ public class DataInitializer implements CommandLineRunner {
                     }
                 }
 
-                // Create some mock submissions for cs3 to test grading
-                java.util.List<AppUser> allStudents = userRepository.findAll().stream()
+                List<AppUser> allStudents = userRepository.findAll().stream()
                         .filter(u -> u.getRole() == Role.STUDENT)
+                        .filter(u -> !DEMO_STUDENT_EMAIL.equalsIgnoreCase(u.getEmail()))
                         .limit(5)
-                        .collect(Collectors.toList());
-                
+                        .toList();
+
                 for (AppUser student : allStudents) {
-                    submissionRepository.save(StudentCourseSubmission.builder()
-                            .courseSeries(cs3)
+                    StudentCourseSubmission submission = submissionRepository.save(StudentCourseSubmission.builder()
+                            .courseSeries(lecturerGradingSeries)
                             .student(student)
                             .status(SubmissionStatus.SUBMITTED)
                             .submissionDate(LocalDateTime.now().minusDays(2))
-                            .documentUrl("https://example.com/submission.pdf")
                             .build());
+
+                    submissionDocumentRepository.save(SubmissionDocument.builder()
+                            .submission(submission)
+                            .fileName("submission.pdf")
+                            .mimeType("application/pdf")
+                            .fileSize((long) DEMO_PDF_BYTES.length)
+                            .contentBase64(DEMO_PDF_BASE64)
+                            .uploadedAt(LocalDateTime.now().minusDays(2))
+                            .build());
+                }
+
+                AppUser demoStudent = userRepository.findByEmail(DEMO_STUDENT_EMAIL).orElse(null);
+                if (demoStudent != null) {
+                    // 1. Ausstehend
+                    createPendingSubmission(demoStudent, pendingEmptySeries);
+
+                    // 2. In Bearbeitung
+                    createPendingSubmissionWithDocument(
+                            demoStudent,
+                            progressSeries,
+                            "studienarbeit-entwurf.pdf",
+                            LocalDateTime.now().minusDays(1)
+                    );
+
+                    // 3. Eingereicht
+                    createSubmittedSubmissionWithDocument(
+                            demoStudent,
+                            submittedSeries,
+                            "referat-final.pdf",
+                            LocalDateTime.now().minusDays(1)
+                    );
+
+                    // 4. Frist abgelaufen – eingereicht
+                    createSubmittedSubmissionWithDocument(
+                            demoStudent,
+                            submittedClosedSeries,
+                            "studienarbeit-final.pdf",
+                            LocalDateTime.now().minusDays(4)
+                    );
+
+                    // 5. Überfällig / nicht eingereicht
+                    createPendingSubmission(demoStudent, overdueSeries);
+
+                    // 6. Bewertet
+                    createGradedSubmissionWithDocument(
+                            demoStudent,
+                            gradedSeries,
+                            "studienarbeit-bewertet.pdf",
+                            LocalDateTime.now().minusDays(12),
+                            1.7,
+                            88.0,
+                            "Gute Struktur, saubere Argumentation."
+                    );
+
+                    // 7. Bald fällig
+                    createPendingSubmission(demoStudent, dueSoonSeries);
+                } else {
+                    System.out.println("   ! Demo student not found: " + DEMO_STUDENT_EMAIL);
                 }
             }
 
@@ -265,14 +473,13 @@ public class DataInitializer implements CommandLineRunner {
             System.out.println("   Courses:         " + courseOfStudyRepository.count());
             System.out.println("   Course Series:   " + courseSeriesRepository.count());
             System.out.println("   Mock Students:   40");
-            System.out.println("   Study Groups:    " + studyGroupRepository.count() + " (Aligned with Frontend Logic)");
+            System.out.println("   Study Groups:    " + studyGroupRepository.count());
             System.out.println("   FAQs:            " + faqRepository.count());
             System.out.println("=================================================================");
         }
     }
 
-    private AppUser createLecturer(Salutation salutation, AcademicTitle title, String first, String last,
-            String email) {
+    private AppUser createLecturer(Salutation salutation, AcademicTitle title, String first, String last, String email) {
         return userRepository.save(AppUser.builder()
                 .salutation(salutation)
                 .title(title)
@@ -290,7 +497,11 @@ public class DataInitializer implements CommandLineRunner {
     private void assignLecturersToModule(Module module, List<AppUser> lecturers) {
         Set<ModuleLecturer> quals = new java.util.HashSet<>();
         for (AppUser l : lecturers) {
-            quals.add(ModuleLecturer.builder().module(module).lecturer(l).grantedAt(LocalDateTime.now()).build());
+            quals.add(ModuleLecturer.builder()
+                    .module(module)
+                    .lecturer(l)
+                    .grantedAt(LocalDateTime.now())
+                    .build());
         }
         module.setQualifiedLecturers(quals);
         moduleRepository.save(module);
@@ -328,14 +539,134 @@ public class DataInitializer implements CommandLineRunner {
             user.setStudentProfile(profile);
             userRepository.save(user);
 
-            membershipRepository.save(StudyGroupMembership.builder().student(profile).studyGroup(group).build());
+            membershipRepository.save(StudyGroupMembership.builder()
+                    .student(profile)
+                    .studyGroup(group)
+                    .build());
         }
+
+        ensureDemoStudent(group);
+    }
+
+    private void ensureDemoStudent(StudyGroup group) {
+        if (userRepository.findByEmail(DEMO_STUDENT_EMAIL).isPresent()) {
+            return;
+        }
+
+        AppUser user = AppUser.builder()
+                .salutation(Salutation.MR)
+                .firstName("Demo")
+                .lastName("Student")
+                .email(DEMO_STUDENT_EMAIL)
+                .password(passwordEncoder.encode("password"))
+                .role(Role.STUDENT)
+                .enabled(true)
+                .startYear(2024)
+                .startQuartal(4)
+                .build();
+        user = userRepository.save(user);
+
+        StudentProfile profile = StudentProfile.builder()
+                .appUser(user)
+                .studentNumber("S-DEMO-1")
+                .startYear(2024)
+                .startQuartal(4)
+                .specialization(group.getSpecialization())
+                .build();
+        profile = profileRepository.save(profile);
+
+        user.setStudentProfile(profile);
+        userRepository.save(user);
+
+        membershipRepository.save(StudyGroupMembership.builder()
+                .student(profile)
+                .studyGroup(group)
+                .build());
     }
 
     private void createSpecializations(CourseOfStudy course, List<String> names) {
         for (String name : names) {
-            specializationRepository.save(Specialization.builder().name(name).courseOfStudy(course).build());
+            specializationRepository.save(Specialization.builder()
+                    .name(name)
+                    .courseOfStudy(course)
+                    .build());
         }
+    }
+
+    private void createPendingSubmission(AppUser student, CourseSeries courseSeries) {
+        submissionRepository.save(StudentCourseSubmission.builder()
+                .courseSeries(courseSeries)
+                .student(student)
+                .status(SubmissionStatus.PENDING)
+                .build());
+    }
+
+    private void createPendingSubmissionWithDocument(AppUser student,
+                                                     CourseSeries courseSeries,
+                                                     String fileName,
+                                                     LocalDateTime uploadedAt) {
+        StudentCourseSubmission submission = submissionRepository.save(StudentCourseSubmission.builder()
+                .courseSeries(courseSeries)
+                .student(student)
+                .status(SubmissionStatus.PENDING)
+                .build());
+
+        submissionDocumentRepository.save(SubmissionDocument.builder()
+                .submission(submission)
+                .fileName(fileName)
+                .mimeType("application/pdf")
+                .fileSize((long) DEMO_PDF_BYTES.length)
+                .contentBase64(DEMO_PDF_BASE64)
+                .uploadedAt(uploadedAt)
+                .build());
+    }
+
+    private void createSubmittedSubmissionWithDocument(AppUser student,
+                                                       CourseSeries courseSeries,
+                                                       String fileName,
+                                                       LocalDateTime submissionDate) {
+        StudentCourseSubmission submission = submissionRepository.save(StudentCourseSubmission.builder()
+                .courseSeries(courseSeries)
+                .student(student)
+                .status(SubmissionStatus.SUBMITTED)
+                .submissionDate(submissionDate)
+                .build());
+
+        submissionDocumentRepository.save(SubmissionDocument.builder()
+                .submission(submission)
+                .fileName(fileName)
+                .mimeType("application/pdf")
+                .fileSize((long) DEMO_PDF_BYTES.length)
+                .contentBase64(DEMO_PDF_BASE64)
+                .uploadedAt(submissionDate)
+                .build());
+    }
+
+    private void createGradedSubmissionWithDocument(AppUser student,
+                                                    CourseSeries courseSeries,
+                                                    String fileName,
+                                                    LocalDateTime submissionDate,
+                                                    Double grade,
+                                                    Double points,
+                                                    String feedback) {
+        StudentCourseSubmission submission = submissionRepository.save(StudentCourseSubmission.builder()
+                .courseSeries(courseSeries)
+                .student(student)
+                .status(SubmissionStatus.GRADED)
+                .submissionDate(submissionDate)
+                .grade(grade)
+                .points(points)
+                .feedback(feedback)
+                .build());
+
+        submissionDocumentRepository.save(SubmissionDocument.builder()
+                .submission(submission)
+                .fileName(fileName)
+                .mimeType("application/pdf")
+                .fileSize((long) DEMO_PDF_BYTES.length)
+                .contentBase64(DEMO_PDF_BASE64)
+                .uploadedAt(submissionDate)
+                .build());
     }
 
     private void createFaqs() {
@@ -442,45 +773,5 @@ public class DataInitializer implements CommandLineRunner {
                 .category("User Account")
                 .build());
         faqRepository.save(faq5);
-
-        Faq faq6 = Faq.builder()
-                .sortOrder(6)
-                .published(false)
-                .build();
-        faq6.getTranslations().add(FaqTranslation.builder()
-                .faq(faq6)
-                .languageCode("de")
-                .question("Wann erscheinen neue FAQ-Einträge?")
-                .answer("Neue FAQ-Einträge werden nach redaktioneller Prüfung durch Administratoren veröffentlicht.")
-                .category("FAQ")
-                .build());
-        faq6.getTranslations().add(FaqTranslation.builder()
-                .faq(faq6)
-                .languageCode("en")
-                .question("When are new FAQ entries published?")
-                .answer("New FAQ entries are published after editorial review by administrators.")
-                .category("FAQ")
-                .build());
-        faqRepository.save(faq6);
-
-        Faq faq7 = Faq.builder()
-                .sortOrder(7)
-                .published(false)
-                .build();
-        faq7.getTranslations().add(FaqTranslation.builder()
-                .faq(faq7)
-                .languageCode("de")
-                .question("Werden künftig weitere Self-Service-Funktionen ergänzt?")
-                .answer("Weitere Funktionen sind geplant, aber noch nicht für alle Nutzer freigeschaltet.")
-                .category("System")
-                .build());
-        faq7.getTranslations().add(FaqTranslation.builder()
-                .faq(faq7)
-                .languageCode("en")
-                .question("Will additional self-service features be added in the future?")
-                .answer("Additional features are planned, but they have not yet been enabled for all users.")
-                .category("System")
-                .build());
-        faqRepository.save(faq7);
     }
 }
